objects/QuickWin__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Analyst_Engineer__c</fullName>
        <label>Analyst Engineer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asia_Pacific__c</fullName>
        <formula>IF(CONTAINS( Impacted_Theaters__c , 'APAC'), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asia Pacific</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Impact_of_Problem__c</fullName>
        <label>Business Impact of Problem</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Problem__c</fullName>
        <label>Business Problem</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Emerging_Markets__c</fullName>
        <formula>IF(CONTAINS( Impacted_Theaters__c , 'EM'), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Emerging Markets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>European_Markets__c</fullName>
        <formula>IF(CONTAINS( Impacted_Theaters__c , 'EU'), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>European Markets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Explanation_of_the_Metrics_Impacted__c</fullName>
        <label>Explanation of the Metrics Impacted</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GET__c</fullName>
        <formula>IF(CONTAINS( Impacted_Theaters__c , 'GET'), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GET</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Approval_Required__c</fullName>
        <label>Global Approval Required</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Go_Live__c</fullName>
        <formula>RIGHT ( Quick_Win_Estimated_Go_Live_Date__c, 4) &amp; 
MID(Quick_Win_Estimated_Go_Live_Date__c, FIND ( 'Q' , Quick_Win_Estimated_Go_Live_Date__c), 2) &amp;
IF(CONTAINS(Quick_Win_Estimated_Go_Live_Date__c, 'January'),'-3Jan',
IF(CONTAINS(Quick_Win_Estimated_Go_Live_Date__c, 'February'),'-1Feb',
IF(CONTAINS(Quick_Win_Estimated_Go_Live_Date__c, 'March'),'-2Mar',
IF(CONTAINS(Quick_Win_Estimated_Go_Live_Date__c, 'April'),'-3Apr',
IF(CONTAINS(Quick_Win_Estimated_Go_Live_Date__c, 'May'),'-1May',
IF(CONTAINS(Quick_Win_Estimated_Go_Live_Date__c, 'June'),'-2June',
IF(CONTAINS(Quick_Win_Estimated_Go_Live_Date__c, 'July'),'-3July',
IF(CONTAINS(Quick_Win_Estimated_Go_Live_Date__c, 'August'),'-1Aug',
IF(CONTAINS(Quick_Win_Estimated_Go_Live_Date__c, 'September'),'-2Sept',
IF(CONTAINS(Quick_Win_Estimated_Go_Live_Date__c, 'October'),'-3Oct',
IF(CONTAINS(Quick_Win_Estimated_Go_Live_Date__c, 'November'),' -1Nov',
IF(CONTAINS(Quick_Win_Estimated_Go_Live_Date__c, 'December'),'-2Dec',
'-xx'))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Go Live</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impacted_Theaters__c</fullName>
        <label>Impacted Theaters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Japan__c</fullName>
        <formula>IF(CONTAINS( Impacted_Theaters__c , 'Japan'), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Japan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Documents_URL__c</fullName>
        <label>Key Documents URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Metrics_Impacted__c</fullName>
        <label>Metrics Impacted</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizations_impacted__c</fullName>
        <label>Organizations impacted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prioritization_Month__c</fullName>
        <label>Prioritization Month</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_Project_Name__c</fullName>
        <label>Proposed Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quick_Win_Estimated_Go_Live_Date__c</fullName>
        <label>Quick Win Estimated Go Live Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quick_Win_Prioritiy__c</fullName>
        <label>Quick Win Prioritiy</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quick_Win_Status__c</fullName>
        <label>Quick Win Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <externalId>true</externalId>
        <label>Request ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Go_Live_Date__c</fullName>
        <label>Requested Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <label>Requester</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requesting_Org_Theatre_Function__c</fullName>
        <label>Requesting Org /Theatre/ Function</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Config__c</fullName>
        <formula>IF(
(CONTAINS( WWSPS_IT_PM__c, 'svaswani') ||
CONTAINS( WWSPS_IT_PM__c, 'wigordon') ||
CONTAINS( WWSPS_IT_PM__c, 'duglover') ||
CONTAINS( WWSPS_IT_PM__c, 'lutesj') ||
 Analyst_Engineer__c = 'praschan') &amp;&amp;
Quick_Win_Status__c ='Delivered', 'Yes' ,'No')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Config?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Mgmt_Area__c</fullName>
        <label>Solution Mgmt Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Theatre__c</fullName>
        <formula>IF(CONTAINS(UPPER(Requesting_Org_Theatre_Function__c), 'JAPAN'),'APJ',
IF(CONTAINS(UPPER(Requesting_Org_Theatre_Function__c), 'APAC'),'APJ',
IF(CONTAINS(UPPER(Requesting_Org_Theatre_Function__c), 'ASIA PACIFIC'),'APJ',
IF(CONTAINS(UPPER(Requesting_Org_Theatre_Function__c), 'Greater China'),'Greater China',
IF(CONTAINS(UPPER(Requesting_Org_Theatre_Function__c), 'EMERGING'),'Emerging Markets',
IF(CONTAINS(UPPER(Requesting_Org_Theatre_Function__c), 'EUROPEAN MARKETS'),'European Markets',
IF(CONTAINS(UPPER(Requesting_Org_Theatre_Function__c), 'US/CANADA'),'US/Canada',
IF(CONTAINS(UPPER(Requesting_Org_Theatre_Function__c), 'ECC'),'US/Canada',
IF(CONTAINS(UPPER(Requesting_Org_Theatre_Function__c), 'GET'),'GET',
'ALL')))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Theatre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tools_Impacted__c</fullName>
        <label>Tools Impacted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Canada__c</fullName>
        <formula>IF(CONTAINS( Impacted_Theaters__c , 'US/C'), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>US/Canada</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WWSPS_IT_PM__c</fullName>
        <label>WWSPS IT PM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWSPS_Owner__c</fullName>
        <label>WWSPS Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Quick Win</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quick Wins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>